# project1

./: .auto_trade_settings.json  .auto_watchlist_last_result.json  .auto_watchlist_settings.json  .auto_watchlist_state.json  .env.example  .gitignore  .paper_trade_state.json  DEPLOY.md  PROJECT_HISTORY.md  PROJECT_STORY.md  REPORT.md  SYSTEM_OVERVIEW.md  alert_runner.py  app.py  arb_monitor.py  auto_optimize.py  auto_optimize_stocks.py  background.js  content.js  fund_check.py  fund_replica.py  gas_scout_db.js  main.py  manifest.json  popup.html  popup.js  position-gas-addition.js  position-gas.js  positions.csv  requirements.txt  run_alert.sh  run_app.sh  setup.bat  setup_cron.sh  setup_cron_mac.sh  update.bat  update.command  update.sh  verify_backtest.py  watchlist.json  (+1 more)
.streamlit/: config.toml
auto_scout/: __init__.py  config.py  database.py  message_generator.py  models.py  runner.py  web.py
backtest-verify/: LICENSE  README.md  pyproject.toml
backtest-verify/src/backtest_verify/: __init__.py  cli.py  core.py  selection.py
backtest-verify/src/backtest_verify.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
backtest-verify/tests/: test_core.py  test_selection.py
modules/: ai_analysis.py  auto_trade.py  auto_watchlist.py  backtest.py  broker.py  charts.py  company_names.py  dashboard.py  data_fetcher.py  diary.py  forecasts.py  fundamental.py  macro_analysis.py  market_utils.py  ml_model.py  news_fetcher.py  notifier.py  optimizer.py  paper_trader.py  portfolio.py  risk_filter.py  risk_metrics.py  screening.py  signals.py  (+4 more)
(+69 files in other folders)
